log/build_2024-05-04_08-44-04/bumperbot_py_examples/stderr.log
  File "/home/thinhcuong/bumperbot_ws/install/bumperbot_py_examples/lib/python3.10/site-packages/bumperbot_py_examples/simple_tf_kinematics.py", line 6
    from tf2
            ^
SyntaxError: invalid syntax

